tests/baselines/reference/taggedTemplatesWithIncompleteTemplateExpressions2.errors.txt
taggedTemplatesWithIncompleteTemplateExpressions2.ts(5,18): error TS1109: Expression expected.
taggedTemplatesWithIncompleteTemplateExpressions2.ts(5,21): error TS1109: Expression expected.


==== taggedTemplatesWithIncompleteTemplateExpressions2.ts (2 errors) ====
    function f(x: TemplateStringsArray, y: string, z: string) {
    }
    
    // Incomplete call, enough parameters.
    f `123qdawdrqw${ }${
                     ~
!!! error TS1109: Expression expected.
                        
!!! error TS1109: Expression expected.